<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".HobbiesActivity">

    <ImageButton
        android:id="@+id/image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/home"
        android:background="@android:color/transparent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_hobbies"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true" />

    <TextSwitcher
        android:id="@+id/text_switcher"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/button_previous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:textColor="#ffffff"/>

        <Button
            android:id="@+id/button_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:textColor="#ffffff"/>
    </LinearLayout>
</RelativeLayout>